; ModuleID = '/home/carl/AnghaBench/radare2/shlr/zip/zip/extr_zip_error.c__zip_error_copy.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/zip/zip/extr_zip_error.c__zip_error_copy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zip_error = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_zip_error_copy(%struct.zip_error* %0, %struct.zip_error* %1) #0 {
  %3 = alloca %struct.zip_error*, align 8
  %4 = alloca %struct.zip_error*, align 8
  store %struct.zip_error* %0, %struct.zip_error** %3, align 8
  store %struct.zip_error* %1, %struct.zip_error** %4, align 8
  %5 = load %struct.zip_error*, %struct.zip_error** %4, align 8
  %6 = getelementptr inbounds %struct.zip_error, %struct.zip_error* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.zip_error*, %struct.zip_error** %3, align 8
  %9 = getelementptr inbounds %struct.zip_error, %struct.zip_error* %8, i32 0, i32 1
  store i32 %7, i32* %9, align 4
  %10 = load %struct.zip_error*, %struct.zip_error** %4, align 8
  %11 = getelementptr inbounds %struct.zip_error, %struct.zip_error* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.zip_error*, %struct.zip_error** %3, align 8
  %14 = getelementptr inbounds %struct.zip_error, %struct.zip_error* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
